<resources>
    <string name="app_name" translatable="false">NewPasswordManager</string>
    <string name="show_password">Show password</string>
    <string name="delete_entry">Delete entry</string>
    <string name="master_password">Master Password</string>
    <string name="login">Login</string>
    <string name="login_with_biometrics">Login with Biometrics</string>
    <string name="generate_pass">Generate password</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="add_new_password">Add new password</string>
    <string name="password_generator">Password Generator</string>
    <string name="password_length">Password length</string>
    <string name="_8">8</string>
    <string name="upper">Uppercase letters</string>
    <string name="lower">Lowercase letters</string>
    <string name="numbers">Numbers</string>
    <string name="specials">Special characters</string>
    <string name="generate_and_copy">Generate and copy</string>
    <string name="cancel">Cancel</string>
    <string name="invisible_pass" translatable="false">••••••••</string>
    <string name="add">Add entry</string>
    <string name="export">Export</string>
    <string name="your_login">Login: %1$s</string>
    <string name="your_pass_copied">Password copied:</string>
    <string name="your_pass_generated">"Generated password: "</string>
    <string name="your_entry_saved">Entry saved</string>
    <string name="plese_enter_all_fields">Please fill in all fields</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="use_your_biometric_credential_to_login">Use your biometric credential to login</string>
    <string name="use_master_password">Use Master Password</string>
    <string name="Enter_master_password">Enter master password</string>
    <string name="wrong_master_password">Incorrect master password</string>
    <string name="entry_deleting">Delete entry</string>
    <string name="are_you_sure_want_to_delete">Are you sure you want to delete this entry?</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="export_success">Export completed successfully</string>
    <string name="export_mistake">Export error</string>
    <string name="permissions_denied">Permission denied</string>
    <string name="add_entry">Add entry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>